# LuxePOS-Web

./: .gitignore  ANDROID_BARCODE_SCANNER.md  ANDROID_BUILD.md  ANDROID_BUILD_RESULT.md  BUILD_PIPELINE_PLAN.md  CHANGELOG.md  DEPLOY_PAGES.md  DESIGN_SYSTEM.md  GITHUB_SECRETS_SETUP.md  Lancer-LuxePOS.bat  MOBILE_AND_MAC_PLAN.md  MONETIZATION_STRATEGY.md  README.md  ROADMAP.md  SESSION_RECAP.md  UI_REFACTOR_PLAN.md  UPDATER_SETUP.md  Z0. VENTES 2026  .xlsx  capacitor.config.json  generate-icons.ps1  generate-photo-map.ps1  luxepos-final.html  package.json  playwright.config.js  revisions-daran-maths-10e.html  sw.js
.claude/: launch.json  settings.local.json
android/: capacitor.settings.gradle
backups/: luxepos-data_2026-04-26_21-57-49.json  luxepos-data_2026-04-26_23-56-47.json  luxepos-data_2026-04-27_13-45-21.json  luxepos-data_2026-05-04_00-38-53.json  luxepos-data_2026-05-04_00-38-54.json  luxepos-data_2026-05-04_00-42-33.json  luxepos-data_2026-05-04_00-42-35.json  luxepos-final-BACKUP-FINAL.html  luxepos-final-PRE-ZAPIER-2026-05-30.html  luxepos-final-backup.html  luxepos-final-temp.html  luxepos-final-v2-backup.html
design_handoff_luxepos_full_app/: LuxePOS App.html  PROMPT.md  README.md  chrome.jsx  design-system.css  home.jsx  icons.jsx  screens-1.jsx  screens-2.jsx  screens-3.jsx
dist-web/: index.html  luxepos-final.html  manifest.json  sw.js
marketing/: ANALYTICS_SETUP.md  DOMAIN_PURCHASE_GUIDE.md  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+31 files in other folders)
